--- a/script/references.bib
+++ b/script/references.bib
@@ -420,3 +420,150 @@
 	address = {Princeton, New Jersey Oxford},
 	langid = {eng}
 }
+
+@article{maclean2021,
+	title = {A Systematic Literature Review of Empirical Research on the Impacts of e-Government: A Public Value Perspective},
+	author = {MacLean, Don and Titah, Ryad},
+	year = {2021},
+	month = {08},
+	date = {2021-08-24},
+	journal = {Public Administration Review},
+	doi = {10.1111/PUAR.13413},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/puar.13413},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
+
+@article{maclean2021a,
+	title = {A Systematic Literature Review of Empirical Research on the Impacts of e-Government: A Public Value Perspective},
+	author = {MacLean, Don and Titah, Ryad},
+	year = {2021},
+	month = {08},
+	date = {2021-08},
+	journal = {Public Administration Review},
+	doi = {10.1111/PUAR.13413},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/puar.13413 https://onlinelibrary.wiley.com/doi/abs/10.1111/puar.13413 https://onlinelibrary.wiley.com/doi/10.1111/puar.13413},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
+
+@article{alcaide-muñoz2017,
+	title = {Analysing the scientific evolution of e-Government using a science mapping approach},
+	author = {{Alcaide{\textendash}Muñoz}, Laura and {Rodríguez{\textendash}Bolívar}, Manuel Pedro and Cobo, {Manuel Jesús} and {Herrera{\textendash}Viedma}, Enrique},
+	year = {2017},
+	month = {09},
+	date = {2017-09},
+	journal = {Government Information Quarterly},
+	pages = {545--555},
+	volume = {34},
+	number = {3},
+	doi = {10.1016/j.giq.2017.05.002},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X16301046},
+	langid = {en}
+}
+
+@article{scholl2021a,
+	title = {The Digital Government Reference Library (DGRL) and its potential formative impact on Digital Government Research (DGR)},
+	author = {Scholl, Hans J.},
+	year = {2021},
+	month = {07},
+	date = {2021-07-22},
+	journal = {Government Information Quarterly},
+	pages = {101613},
+	doi = {10.1016/J.GIQ.2021.101613},
+	note = {Publisher: JAI}
+}
+
+@article{webster2002,
+	title = {Analyzing the Past to Prepare for the Future: Writing a Literature Review},
+	author = {Webster, Jane and Watson, Richard T.},
+	year = {2002},
+	date = {2002},
+	journal = {MIS Quarterly},
+	pages = {xiii--xxiii},
+	volume = {26},
+	number = {2},
+	url = {https://www.jstor.org/stable/4132319},
+	note = {Publisher: Management Information Systems Research Center, University of Minnesota}
+}
+
+@article{nambisan2019,
+	title = {The digital transformation of innovation and entrepreneurship: Progress, challenges and key themes},
+	author = {Nambisan, Satish and Wright, Mike and Feldman, Maryann},
+	year = {2019},
+	month = {10},
+	date = {2019-10-01},
+	journal = {Research Policy},
+	pages = {103773},
+	volume = {48},
+	number = {8},
+	doi = {10.1016/J.RESPOL.2019.03.018},
+	note = {Publisher: North-Holland}
+}
+
+@article{nambisan2019,
+	title = {The digital transformation of innovation and entrepreneurship: Progress, challenges and key themes},
+	author = {Nambisan, Satish and Wright, Mike and Feldman, Maryann},
+	year = {2019},
+	month = {10},
+	date = {2019-10-01},
+	journal = {Research Policy},
+	pages = {103773},
+	volume = {48},
+	number = {8},
+	doi = {10.1016/J.RESPOL.2019.03.018},
+	note = {Publisher: North-Holland}
+}
+
+@article{nambisan2019,
+	title = {The digital transformation of innovation and entrepreneurship: Progress, challenges and key themes},
+	author = {Nambisan, Satish and Wright, Mike and Feldman, Maryann},
+	year = {2019},
+	month = {10},
+	date = {2019-10-01},
+	journal = {Research Policy},
+	pages = {103773},
+	volume = {48},
+	number = {8},
+	doi = {10.1016/J.RESPOL.2019.03.018},
+	note = {Publisher: North-Holland}
+}
+
+@article{plesner2018,
+	title = {The transformation of work in digitized public sector organizations},
+	author = {Plesner, Ursula and Justesen, Lise and Glerup, Cecilie},
+	year = {2018},
+	month = {09},
+	date = {2018-09-12},
+	journal = {Journal of Organizational Change Management},
+	pages = {1176--1190},
+	volume = {31},
+	number = {5},
+	doi = {10.1108/JOCM-06-2017-0257},
+	note = {Publisher: Emerald Publishing Limited}
+}
+
+@article{plesner2018,
+	title = {The transformation of work in digitized public sector organizations},
+	author = {Plesner, Ursula and Justesen, Lise and Glerup, Cecilie},
+	year = {2018},
+	month = {09},
+	date = {2018-09-12},
+	journal = {Journal of Organizational Change Management},
+	pages = {1176--1190},
+	volume = {31},
+	number = {5},
+	doi = {10.1108/JOCM-06-2017-0257},
+	note = {Publisher: Emerald Publishing Limited}
+}
+
+@article{barley2001,
+	title = {Bringing Work Back In},
+	author = {Barley, Stephen R and Kunda, Gideon},
+	year = {2001},
+	month = {01},
+	date = {2001-01},
+	journal = {Organization Science},
+	pages = {75--95},
+	volume = {12},
+	number = {1},
+	url = {https://about.jstor.org/terms}
+}
