--- a/script/references.bib
+++ b/script/references.bib
@@ -567,3 +567,125 @@
 	number = {1},
 	url = {https://about.jstor.org/terms}
 }
+
+@article{cherry2015,
+	title = {Beyond Misclassification: The Digital Transformation of Work},
+	author = {Cherry, Miriam A.},
+	year = {2015},
+	date = {2015},
+	journal = {Comparative Labor Law & Policy Journal},
+	volume = {37}
+}
+
+@article{cherry2015,
+	title = {Beyond Misclassification: The Digital Transformation of Work},
+	author = {Cherry, Miriam A.},
+	year = {2015},
+	date = {2015},
+	journal = {Comparative Labor Law & Policy Journal},
+	volume = {37}
+}
+
+@article{scupola2021,
+	title = {Co-production in digital transformation of public administration and public value creation: The case of Denmark},
+	author = {Scupola, Ada and Mergel, Ines},
+	year = {2021},
+	month = {11},
+	date = {2021-11-15},
+	journal = {Government Information Quarterly},
+	pages = {101650},
+	doi = {10.1016/J.GIQ.2021.101650},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X21000861},
+	note = {Publisher: JAI}
+}
+
+@article{scupola2021,
+	title = {Co-production in digital transformation of public administration and public value creation: The case of Denmark},
+	author = {Scupola, Ada and Mergel, Ines},
+	year = {2021},
+	month = {11},
+	date = {2021-11-15},
+	journal = {Government Information Quarterly},
+	pages = {101650},
+	doi = {10.1016/J.GIQ.2021.101650},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X21000861},
+	note = {Publisher: JAI}
+}
+
+@book{schou2018,
+	title = {Digitalization and Public Sector Transformations},
+	author = {Schou, Jannick and Hjelholt, Morten},
+	year = {2018},
+	date = {2018},
+	publisher = {Springer International Publishing},
+	doi = {10.1007/978-3-319-76291-3},
+	url = {http://link.springer.com/10.1007/978-3-319-76291-3},
+	note = {DOI: 10.1007/978-3-319-76291-3},
+	address = {Cham},
+	langid = {en}
+}
+
+@book{schou2018,
+	title = {Digitalization and Public Sector Transformations},
+	author = {Schou, Jannick and Hjelholt, Morten},
+	year = {2018},
+	date = {2018},
+	publisher = {Springer International Publishing},
+	doi = {10.1007/978-3-319-76291-3},
+	url = {http://link.springer.com/10.1007/978-3-319-76291-3},
+	note = {DOI: 10.1007/978-3-319-76291-3},
+	address = {Cham},
+	langid = {en}
+}
+
+@article{madsen2021,
+	title = {The accidental caseworker {\textendash} How digital self-service influences citizens' administrative burden},
+	author = {Madsen, {Christian Østergaard} and Lindgren, Ida and Melin, Ulf},
+	year = {2021},
+	month = {11},
+	date = {2021-11-10},
+	journal = {Government Information Quarterly},
+	pages = {101653},
+	doi = {10.1016/J.GIQ.2021.101653},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X21000897},
+	note = {Publisher: JAI}
+}
+
+@article{madsen2021,
+	title = {The accidental caseworker {\textendash} How digital self-service influences citizens' administrative burden},
+	author = {Madsen, {Christian Østergaard} and Lindgren, Ida and Melin, Ulf},
+	year = {2021},
+	month = {11},
+	date = {2021-11-10},
+	journal = {Government Information Quarterly},
+	pages = {101653},
+	doi = {10.1016/J.GIQ.2021.101653},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X21000897},
+	note = {Publisher: JAI}
+}
+
+@article{webster2002a,
+	title = {Analyzing the Past to Prepare for the Future: Writing a Literature Review},
+	author = {Webster, Jane and Watson, Richard T.},
+	year = {2002},
+	date = {2002},
+	journal = {MIS Quarterly},
+	pages = {xiii--xxiii},
+	volume = {26},
+	number = {2},
+	url = {https://www.jstor.org/stable/4132319},
+	note = {Publisher: Management Information Systems Research Center, University of Minnesota}
+}
+
+@article{webster2002a,
+	title = {Analyzing the Past to Prepare for the Future: Writing a Literature Review},
+	author = {Webster, Jane and Watson, Richard T.},
+	year = {2002},
+	date = {2002},
+	journal = {MIS Quarterly},
+	pages = {xiii--xxiii},
+	volume = {26},
+	number = {2},
+	url = {https://www.jstor.org/stable/4132319},
+	note = {Publisher: Management Information Systems Research Center, University of Minnesota}
+}
